buildAndPackageLib("bzgf"
	COMPONENT "bzgf"
	DESCRIPTION "${PROJECT_DESCRIPTION}\n\nSomething related to compression."
	CMAKE_EXPORT_NAMESPACE "${PROJECT_NAME}"
	PUBLIC_INCLUDES "${CMAKE_CURRENT_LIST_DIR}"
	INSTALL_INCLUDE_DIR "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}"
)

option(BGZF_WITH_CACHE "Enable caching in bzgf" ON)
if(BGZF_WITH_CACHE)
	target_compile_definitions(bzgf PRIVATE "-DBGZF_CACHE") #khash is header-only
	target_link_libraries(bzgf PRIVATE "${PROJECT_NAME}")
endif()

option(BGZF_WITH_KNETFILE "Use knetfile in bzgf" OFF)
if(BGZF_WITH_KNETFILE)
	target_compile_definitions(bzgf PRIVATE "-D_USE_KNETFILE")
	target_link_libraries(bzgf PRIVATE knetfile)
	set(CPACK_COMPONENT_BGZF_DEPENDS "${CPACK_COMPONENT_BGZF_DEPENDS};knetfile")

	list(APPEND CPACK_DEBIAN_BZGF_PACKAGE_DEPENDS "${CPACK_DEBIAN_KNETFILE_PACKAGE_NAME}")
	string(REPLACE ";" ", " CPACK_DEBIAN_BZGF_PACKAGE_DEPENDS "${CPACK_DEBIAN_BZGF_PACKAGE_DEPENDS}")
	set(CPACK_DEBIAN_BZGF_PACKAGE_DEPENDS "${CPACK_DEBIAN_BZGF_PACKAGE_DEPENDS}" PARENT_SCOPE)

	list(APPEND CPACK_RPM_BZGF_PACKAGE_DEPENDS "${CPACK_RPM_KNETFILE_PACKAGE_NAME}")
	string(REPLACE ";" ", " CPACK_RPM_BZGF_PACKAGE_DEPENDS "${CPACK_RPM_BZGF_PACKAGE_DEPENDS}")
	set(CPACK_RPM_BZGF_PACKAGE_DEPENDS "${CPACK_RPM_BZGF_PACKAGE_DEPENDS}" PARENT_SCOPE)

	pass_through_cpack_vars()
endif()
