find_package(Threads REQUIRED)

set(CPACK_DEBIAN_KTHREAD_PACKAGE_SHLIBDEPS ON)
buildAndPackageLib("kthread"
	COMPONENT "kthread"
	DESCRIPTION "${PROJECT_DESCRIPTION}\n\nSimple threading models."
	CMAKE_EXPORT_NAMESPACE "${PROJECT_NAME}"
	PUBLIC_INCLUDES "${CMAKE_CURRENT_LIST_DIR}"
	INSTALL_INCLUDE_DIR "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}"
	PRIVATE_LIBS "Threads::Threads"
)
